--- a/doc/release-notes/2.2.0.1
+++ b/doc/release-notes/2.2.0.1
@@ -12,4 +12,4 @@ Infrastructure
   include the following code in .emacs:
 
     (load-file (let ((coding-system-for-read 'utf-8))
-                    (shell-command-to-string "agda --emacs-mode")))
+                    (shell-command-to-string "agda-mode locate")))
