--- a/doc/release-notes/2.2.0.1
+++ b/doc/release-notes/2.2.0.1
@@ -4,6 +4,11 @@
 
 Important changes since 2.2.0:
 
+Tools
+-----
+
+* The --malonzodir option has been renamed to --malonzo-dir.
+
 Infrastructure
 --------------
 
