Mentioned the default HTML directory.

--- a/doc/release-notes/2.2.0.1
+++ b/doc/release-notes/2.2.0.1
@@ -9,6 +9,9 @@ Tools
 
 * The --malonzodir option has been renamed to --malonzo-dir.
 
+* The output of agda --html is by default placed in a directory called
+  "html".
+
 Infrastructure
 --------------
 
