The final version of the HCAR entry for May 2009.

--- a/doc/HCAR/May-2009.tex
+++ b/doc/HCAR/May-2009.tex
@@ -29,8 +29,8 @@ a platform for experiments in dependently typed programming.
 
 New since last time:
 \begin{itemize}
-\item Version 2.2.0 has been released. The last release was in 2007,
-  so the new version includes lots of changes.
+\item Versions 2.2.0 and 2.2.2 have been released. The previous
+  release was in 2007, so the new versions include lots of changes.
 \item Agda is now available on Hackage (\texttt{cabal install
     Agda-executable}).
 \item Highlighted, hyperlinked HTML can be generated from Agda source
