Included Janis Voigtländer's edits of the HCAR submission.

--- a/doc/HCAR/May-2009.tex
+++ b/doc/HCAR/May-2009.tex
@@ -6,8 +6,8 @@
 
 \begin{hcarentry}[updated]{Agda}
 \label{agda}
-\report{Nils Anders Danielsson}
-\status{Actively developed}
+\report{Nils Anders Danielsson}%05/09
+\status{actively developed}
 \participants{Ulf Norell and many others}
 \makeheader
 
@@ -18,7 +18,7 @@ has in store for you.
 Agda is a dependently typed functional programming language (developed
 using Haskell). The language has inductive families, i.e.\ GADTs which
 can be indexed by \emph{values} and not just types. Other goodies
-include coinductive types, parameterised modules, mixfix operators,
+include coinductive types, parameterized modules, mixfix operators,
 and an \emph{interactive} Emacs interface (the type checker can assist
 you in the development of your code).
 
@@ -35,7 +35,7 @@ New since last time:
     Agda-executable}).
 \item Highlighted, hyperlinked HTML can be generated from Agda source
   code using \texttt{agda --html}.
-\item The Agda Wiki is better organised, so it should be easier for a
+\item The Agda Wiki is better organized, so it should be easier for a
   newcomer to find relevant information.
 \end{itemize}
 
